# linguaflow

./: .gitignore  LICENSE  README.md  SPONSOR.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: publish.yml  test.yml
linguaflow/: __init__.py  cli.py  config.py  markdown.py  translator.py
scripts/: run_tests.py
tests/: test_markdown.py  test_translator.py
